// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-option default 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option option-separator 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option option-title & separator 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option option-title 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option scroll 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/disabled skin="over-dark" 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-dark m--has-ripple m--is-disabled"
          disabled="disabled"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/disabled skin="over-light" 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
          disabled="disabled"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/disabled skin="over-mixed" 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-option__button"
          disabled="disabled"
          id="mOption-fakeId"
        >
          <svg
            aria-hidden="true"
            class="m-icon"
            height="20px"
            title="Ouvrir le menu"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/skin skin="over-dark" 1`] = `
<div
  style="position: relative; background-color: black;"
>
  <div
    class="m-option"
  >
    <div
      class="m-popup m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mOption-fakeId-controls"
            aria-haspopup="true"
            class="m-icon-button m--is-skin-dark m--has-ripple"
            id="mOption-fakeId"
            style="width: 44px; height: 44px;"
            title="Ouvrir le menu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/skin skin="over-light" (default) 1`] = `
<div
  class="m-option"
>
  <div
    class="m-popup m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mOption-fakeId-controls"
          aria-haspopup="true"
          class="m-icon-button m--is-skin-light m--has-ripple"
          id="mOption-fakeId"
          style="width: 44px; height: 44px;"
          title="Ouvrir le menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-option/skin skin="over-mixed" 1`] = `
<div
  style="position: relative;"
>
  <div
    class="m-option"
    style="position: relative; z-index: 2;"
  >
    <div
      class="m-popup m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mOption-fakeId-controls"
            aria-haspopup="true"
            class="m-option__button"
            id="mOption-fakeId"
          >
            <svg
              aria-hidden="true"
              class="m-icon"
              height="20px"
              title="Ouvrir le menu"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <img
    alt="exemple"
    src="https://picsum.photos/id/1025/400/300"
    style="position: absolute; left: 0px;"
  />
</div>
`;
